--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "three": "^0.146.0"
   }
 }
